--- a/config.env
+++ b/config.env
@@ -25,7 +25,7 @@ EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 YT_DLP_QUALITY = ""
 # Update
-UPSTREAM_REPO = ""
+UPSTREAM_REPO = "https://github.com/anasty17/mirror-leech-telegram-bot"
 UPSTREAM_BRANCH = ""
 # Leech
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
