--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+OWNER_ID = "1791446058"                               # Require restart after changing it while bot running
+TELEGRAM_API = "7784110"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "f81b6478f985c1283fa8c4847d1860ec"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
 RCLONE_PATH = ""
@@ -13,7 +13,7 @@ STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+SUDO_USERS = "1584917660"                             # Require restart after changing it while bot running
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
 STATUS_LIMIT = "10"
@@ -47,9 +47,9 @@ QUEUE_UPLOAD = ""
 RSS_DELAY = ""
 RSS_CHAT_ID = ""
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "0O5zxZRT"
+MEGA_EMAIL_ID = "j.ess.eldi.a.l4@gmail.com"
+MEGA_PASSWORD = "Drivetalk"
 # Buttons
 VIEW_LINK = ""
 # Torrent Search
