--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
+BOT_TOKEN = "5915104050:AAGKH7tiqdRS66Yr2u0xgfl-G5xBGeY9XOI"                              # Require restart after changing it while bot running
 OWNER_ID = "1791446058"                               # Require restart after changing it while bot running
 TELEGRAM_API = "7784110"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "f81b6478f985c1283fa8c4847d1860ec"                          # Require restart after changing it while bot running
