--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-BOT_TOKEN = "6230755397:AAEJuHtFGsOGTsSh71rq5SJ7jDWxoirH9Sk"                              # Require restart after changing it while bot running
+BOT_TOKEN = "6269891622:AAH8PGV6uNWNw5pRMSMk_RJngD3IhR1ZonQ"                              # Require restart after changing it while bot running
 OWNER_ID = "1791446058"                               # Require restart after changing it while bot running
 TELEGRAM_API = "7784110"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "f81b6478f985c1283fa8c4847d1860ec"                          # Require restart after changing it while bot running
@@ -12,8 +12,8 @@ DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it 
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = "1584917660"                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot runni
+SUDO_USERS = "6113815320"                             # Require restart after changing it while bot running
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
 STATUS_LIMIT = "10"
