--- a/config.env
+++ b/config.env
@@ -2,59 +2,22 @@ BOT_TOKEN = "6269891622:AAH8PGV6uNWNw5pRMSMk_RJngD3IhR1ZonQ"                    
 OWNER_ID = "1791446058"                               # Require restart after changing it while bot running
 TELEGRAM_API = "7784110"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "f81b6478f985c1283fa8c4847d1860ec"                          # Require restart after changing it while bot running
-# OPTIONAL CONFIG
-GDRIVE_ID = ""
-RCLONE_PATH = ""
-DEFAULT_UPLOAD = ""
-RCLONE_FLAGS = ""
-IS_TEAM_DRIVE = ""
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
+SUDO_USERS = "6113815320"                             # Require restart after changing it while bot running
+STATUS_LIMIT = "2"
+DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
-DATABASE_URL = ""                           # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot runni
-SUDO_USERS = "6113815320"                             # Require restart after changing it while bot running
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = "10"
-STOP_DUPLICATE = ""
-CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-UPTOBOX_TOKEN = ""
-TORRENT_TIMEOUT = ""
-EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
-YT_DLP_QUALITY = ""
-# Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
-# Leech
-USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-LEECH_SPLIT_SIZE = ""
-AS_DOCUMENT = ""
-EQUAL_SPLITS = ""
-MEDIA_GROUP = ""
-LEECH_FILENAME_PERFIX = ""
-DUMP_CHAT = ""
-# qBittorrent/Aria2c
-BASE_URL = ""
-SERVER_PORT = ""
-WEB_PINCODE = ""
-#Queueing system
-QUEUE_ALL = ""
-QUEUE_DOWNLOAD = ""
-QUEUE_UPLOAD = ""
-# RSS
-RSS_DELAY = ""
-RSS_CHAT_ID = ""
-# Mega
-MEGA_API_KEY = "0O5zxZRT"
-MEGA_EMAIL_ID = "j.ess.eldi.a.l4@gmail.com"
-MEGA_PASSWORD = "Drivetalk"
-# Buttons
-VIEW_LINK = ""
-# Torrent Search
-SEARCH_API_LINK = ""
-SEARCH_LIMIT = ""
+INCOMPLETE_TASK_NOTIFIER = "False"
+IS_TEAM_DRIVE = "False"
+STOP_DUPLICATE = "False"
+AS_DOCUMENT = "False"
+EQUAL_SPLITS = "False"
+MEDIA_GROUP = "False"
+WEB_PINCODE = "False"
+RSS_DELAY = "900"
+VIEW_LINK = "False"
+SEARCH_LIMIT = "0"
 SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
