--- a/config.env
+++ b/config.env
@@ -1,9 +1,8 @@
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bOWNER_ID = "1791446058"                               # Require restart after changing it while bot running
+BOT_TOKEN = "6134775904:AAF-a4W_q1e8tfONbVtHWTj6FJ4fWqQsze4"
+OWNER_ID = "1791446058"                    # Require restart after changing it while bot running
 TELEGRAM_API = "7784110"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "f81b6478f985c1283fa8c4847d1860ec"                          # Require restart after changing it while bot running
-DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-SUDO_USERS = "1791446058"                             # Require restart after changing it while bSUDO_USERS = "6113815320"                             # Require restart after changing it while bot running
+DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running = "6113815320"                             # Require restart after changing it while bot running
 STATUS_LIMIT = "2"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
