--- a/config.env
+++ b/config.env
@@ -17,6 +17,7 @@ WEB_PINCODE = "False"
 RSS_DELAY = "900"
 VIEW_LINK = "False"
 SEARCH_LIMIT = "0"
+BASE_URL_PORT = "80"
 SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
